class Region {
  /// e.g. 'Europe'
  final String name;

  /// e.g. 'https://rstr.in/google/tripedia/TmR12QdlVTT'
  final String imageUrl;

  Region({
    required this.name,
    required this.imageUrl,
  });
}
