...
                  listenable: viewModel,
                  builder: (context, child) => viewModel.dateRange != null
                      ? Text(
                          _dateFormat(viewModel.dateRange!),
                          style: TextStyles.text,
                        )
                      : const Text('Add Dates', style: TextStyles.hint),
                )
              ],
            ),
          ),
        ),
      ),
...
